src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.card, .card-collapse {
    @apply bg-neutral text-neutral-content;
}

.card-body {
    @apply p-4;
}

.collapse-title {
    @apply p-4;
}

/* Allow overflow when collapse is open */
/* Prevents FilterColumn sort dropdown getting cut off when only 1 item */
.collapse:has(> input[type="checkbox"]:checked) {
    @apply overflow-visible;
}

/* Prevent PlantCard and GroupCard from expanding when focused */
/* Causes card to start expanding while page loads when href is clicked */
.card-collapse:focus:not(:has(> input[type="checkbox"]:checked)) {
    grid-template-rows: auto 0fr;
}
.card-collapse:focus:not(:has(> input[type="checkbox"]:checked)) > .collapse-content {
    visibility: hidden;
    min-height: 0px;
    padding-bottom: 0rem;
}

.loading-lg {
    width: 4rem;
}

.combobox-options-div {
    @apply absolute top-20 mt-2 max-h-60 w-full overflow-auto rounded-md bg-neutral;
}

.combobox-option {
    @apply relative text-white text-center select-none py-2;
}

.tab-group {
    @apply flex space-x-1 rounded-xl bg-neutral p-1;
}

.tab-option {
    @apply w-full rounded-lg py-2.5 font-semibold focus:outline-none;
}

.tab-option-selected {
    @apply bg-accent text-accent-content;
}

.input::placeholder {
    opacity: 0.5;
}

/* Change input focus color, remove gap between outline and input */
.input, .input-bordered, .textarea-bordered {
    @apply focus:border-accent focus:outline-accent !outline-offset-0;
}

.no-scrollbar::-webkit-scrollbar {
    display: none;
}

.no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

/* Repot modal pot size option */
.pot-size {
    @apply text-xl md:text-2xl text-center font-bold;
    @apply flex rounded-full bg-base-300 focus:outline-none;
}

/* Repot modal selected pot size option */
.pot-size-selected {
    @apply bg-primary text-white;
}

/* Dark mode custom pot size placeholder text */
html[data-theme="dark"] .pot-size-selected::placeholder {
    @apply text-white/50;
}

/* Light mode custom pot size placeholder text */
html[data-theme="light"] .pot-size::placeholder {
    @apply text-black/50;
}

html[data-theme="light"] .pot-size-selected::placeholder {
    @apply text-white/65;
}

.btn-close {
    @apply btn btn-sm btn-ghost;
    border-radius: 9999px;
    padding: 0;
}

/* Keep dropdown button hover highlight visible while dropdown is open */
.dropdown > .btn-ghost:focus {
    background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
}

.btn-close:focus-visible {
    @apply outline-0;
}

.dropdown-center .dropdown-content {
    @apply left-1/2 transform -translate-x-1/2;
}

.dropdown-options {
    @apply menu menu-md dropdown-content z-[99] p-2 shadow bg-base-300 rounded-box;
}

/* Wraps Navbar title dropdown contents (plant/group details) */
.details-card {
    @apply card card-compact w-72 p-2 mt-2 mx-auto shadow;
    /* Allow scrolling inside card, eg phone in landscape orientation */
    @apply max-h-[calc(100svh-4rem)] overflow-y-auto overscroll-contain;
    /* Prevent long strings without spaces making card side scroll */
    @apply overflow-x-hidden;
}

.btn-prune {
    @apply bg-prune text-warning-content border border-transparent;
}

.btn-prune:hover {
    background-color: color-mix(in oklab, theme('colors.prune'), black 10%);
    border-color: color-mix(in oklab, theme('colors.prune'), black 10%);
}

.alert {
    @apply whitespace-normal md:whitespace-nowrap;
}

.photo-thumbnail {
    @apply rounded-lg object-cover;
}

@keyframes popover-animation {
    0% {
        opacity: 0;
        transform: scale(0.95);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.popover-enter {
    transform-origin: bottom;
    animation: popover-animation 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.popover-image {
    @apply object-scale-down max-h-[80vh] max-w-[80vw] md:max-h-[50vh] md:max-w-[50vw];
}

/* Prevent navbar covering top of popover */
#react-tiny-popover-container {
    z-index: 99;
}

/* Make cursor-pointer override cursor style for all children */
.cursor-pointer, .cursor-pointer * {
    cursor: pointer !important;
}

.btn-error {
    color: #eee;
}

/* Prevent iOS zooming in when textarea focused */
.textarea {
    @apply text-base;
}

/* Fix modal filling full height on iOS safari when address bar visible */
.modal-box {
    max-height: calc(100dvh - 5em);
}

.floating-footer {
    @apply fixed bottom-0 left-1/2 -translate-x-1/2 z-50;
    @apply flex flex-row my-4 p-4 bg-gray-600/50 rounded-box shadow-inner;
    @apply transition-all duration-300 flex flex-row;
}

.floating-footer-hidden {
    @apply translate-y-24 scale-90 opacity-0;
}

.floating-footer-visible {
    @apply translate-y-0 scale-100 opacity-100;
}

/* Allows breaking long strings with no spaces to prevent overflow */
/* Only breaks words if there is no other opportunity (eg spaces) */
.break-anywhere {
    overflow-wrap: anywhere;
    word-break: break-word;;
}

